<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/GreenText"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.axilleastr.iot_project_android.fragments.LoginFragment"
    android:background="@color/background_main"
    >
    <!-- android:background="@color/black_overlay"-->

    <TextView
        style="@style/MyActionBarTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="@dimen/activity_setting_margin"
        android:paddingBottom="@dimen/activity_setting_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/organization_setting"
        android:id="@+id/organizationSetting"
        />
    <EditText
        style="@style/MyActionBarTitleText"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="@dimen/activity_setting_margin"
        android:paddingBottom="@dimen/activity_setting_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:hint="@string/organization_value"
        android:inputType="textNoSuggestions"
        android:id="@+id/organizationValue"
        />
    <TextView
        style="@style/MyActionBarTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="@dimen/activity_setting_margin"
        android:paddingBottom="@dimen/activity_setting_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/device_id_setting"
        android:id="@+id/deviceIDSetting"
        />
    <EditText
        style="@style/MyActionBarTitleText"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="@dimen/activity_setting_margin"
        android:paddingBottom="@dimen/activity_setting_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:hint="@string/device_id_value"
        android:inputType="textNoSuggestions"
        android:id="@+id/deviceIDValue"
        />
    <TextView
        style="@style/MyActionBarTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="@dimen/activity_setting_margin"
        android:paddingBottom="@dimen/activity_setting_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/auth_token_setting"
        android:id="@+id/authTokenSetting"
        />
    <EditText
        style="@style/MyActionBarTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="@dimen/activity_setting_margin"
        android:paddingBottom="@dimen/activity_setting_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:hint="@string/auth_token_value"
        android:inputType="textPassword"
        android:id="@+id/authTokenValue"
        />
    <Button
        style="@style/SmallButton"
        android:layout_gravity="center|bottom"
        android:text="@string/showToken_button"
        android:id="@+id/showTokenButton"/>
    <TextView
        style="@style/MyActionBarTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="@dimen/activity_setting_margin"
        android:paddingBottom="@dimen/activity_setting_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/is_connected"
        android:id="@+id/isConnected"
        />
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <Button
        style="@style/BottomButton"
        android:layout_gravity="center|bottom"
        android:text="@string/activate_button"
        android:textColor="@color/white"
        android:id="@+id/activateButton"/>
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>